# optimize_your_curves

./: .gitignore  README.md
.github/workflows/: build-sldes.yaml  ci.yml
data/: pisa_results.json
demo/: .pre-commit-config.yaml  README.md  damped_sine_optimization.ipynb  pyproject.toml
demo/demo/: chi_squared.py  damped_sin.py  observed_vs_predicated_error.py  parameters_values_lmfit.py  parse_data.py  rosenbrock.py
demo/illustration_plots/: damped_sine.py  example_with_bounds.py  line_chi_squared.py  line_polynomials.py  observed_vs_predicted.py  parameters_values_lmfit.py  parameters_values_scipy_no_bounds.py
docs/: index.html
talk/: README.md  ngi-theme.css  slides-v1.md  slides.html  slides.md
talk/.github/workflows/: build-sldes.yaml
talk/slides_files/: 1f40d.svg:Zone.Identifier  1f469-200d-1f4bb.svg:Zone.Identifier  1f4aa.svg:Zone.Identifier  1f4c8.svg:Zone.Identifier  2728.svg:Zone.Identifier  2753.svg:Zone.Identifier  2757.svg:Zone.Identifier  2764.svg:Zone.Identifier  2b50.svg:Zone.Identifier
