[tool.poetry]
name = "curve-fit"
version = "0.1.0"
description = ""
authors = ["Sunniva Indrehus <sunniva.indrehus@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
lmfit = "^1.3.2"
numpy = "^2.1.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
