[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Sunniva Indrehus <sunniva.indrehus@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
lmfit = "^1.3.2"
matplotlib = "^3.9.2"
numdifftools = "^0.9.41"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
